--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-Welcome To Grey Spire Games
+<h1>Welcome To Grey Spire Games</h1>
+<p>
 <a href="/torchCharSheet.html">Torch Character Sheet</a>
+</p>
